# note

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .travis.yml  404.html  README.md  awk-2.html  awk.html  bash-1.html  bash-2.html  bash-4.html  config  findent  index.html  linux-1-daily.html  linux-1-exception.html  linux-1-gnome.html  linux-1-systemd.html  linux-2-process.html  linux-3-package.html  linux-3-zsh-termux.html  linux-5-owner.html  linux-6-network.html  linux-6-package-mount.html  linux-7-tar-sync.html  linux-7-text-operation.html  linux-8-printer.html  linux-gpg.html  manjaro.html  print.html  searchindex.js  searchindex.json
DSA/: DSA-5-binary-tree.md  DSA-6-graph.md  DSA.lyx  math-preamble.tex
EMD/: .gitignore  EMD_exercise1.lyx  EMD_exercise2.lyx  EMD_exercise3.lyx  EMD_exercise4.lyx  EMD_exercise5.lyx  EMD_exercise6.lyx  EMD_exercise7.lyx  EMD_final_2020a.lyx  EMD_final_2020b.lyx  EMD_final_a.lyx  EMD_final_a_q.lyx  EMD_final_b.lyx  EMD_final_b_q.lyx  EMD_middle.lyx  EMD_middle2.lyx
FiniteEM/: .gitignore  CPT-module.md  DSA.lyx  E-chemistry.lyx  EChem-Model.lyx  Echem-manual.lyx  FEMinEM.wl  FVM_in_CFD.lyx  adaptive-mesh.lyx  boundaryEM.lyx  c-recipes.lyx  compute-physics.lyx  comsol-manual.lyx  conservative-interpolation.lyx  diff-manifold.lyx  echem_case3_conc.wl  fem-Chen-ZhangXing.lyx  fem-JinJianMing.lyx  fem-JinJianMing.tex  fem-Zienkiewicz.lyx  fem-num-JinJianMing.lyx  fem-quadrature.lyx  fem_quadrilateral.wl  finite-EM.lyx  finite-EM.md  finite_EM.lyx  manifold.lyx  manifold.typ  math-fem-GPOdPw.lyx  math-fem-qdDDQx.lyx  math-fem.lyx  math-fem2.lyx  math-fem3.lyx  math-links.md  math-preamble.tex  math_fem.lyx  math_note.lyx  mesh-quality.lyx  mesh.md  moving-mesh.lyx  (+20 more)
adobe/: book.toml
android/: book.toml
axodraw2/: .gitignore  lag.py  loop_axo.sh  nl_vertexes.py  quark_flow.py
cashim/: deep-learn.lyx  似然估计函数.md  协方差.md  格拉姆矩阵.md
chpt/: .gitignore  FeynArts.lyx  chpt-preamble.tex  chpt_lagrangian.lyx  chpt_nonlocal.lyx  chpt_primer.lyx  differential-geometry.lyx  feynman_integral.lyx  gpd_belitsky.lyx  gpd_convolution.lyx  gpd_diehl.lyx  gpd_integral.lyx  gpd_note.lyx  gpd_support.lyx  lightcone-integral.lyx  math_note.lyx  math_note2.lyx  math_note3.lyx  pdf_note.lyx  qft_general.lyx  report_yang_20201119.lyx
cmake-cl-gcc/: book.toml
cmake-cl-gcc/cmake-examples/hdf5-cxx-exa1/: CMakeLists.txt  Possion1.cpp  write_data.cpp
cmake-cl-gcc/cmake-tutorial-cn/cmake-cn-1-11/: CMakeLists.txt  cmake-cn-1.11-cxx-standard.md
cmake-cl-gcc/cmake-tutorial-cn/cmake-cn-1-11/src/: main.cpp
cmake-cl-gcc/cmake-tutorial-cn/cmake-cn-1-3/: CMakeLists.txt
cmake-cl-gcc/cmake-tutorial-cn/cmake-cn-1-7/: CMakeLists.txt  main.cpp
cmake/cmake-cn-1-4/: CMakeLists.txt
cmake/cmake-cn-1-4/include/shared/: Hello.h  HelloHeader.h
cmake/cmake-cn-1-4/src/: Hello.cpp
cmake/cmake-cn-1-5/: CMakeLists.txt
cmake/cmake-cn-1-6/: CMakeLists.txt  main.cpp
cmake/hdf5-c-shared/: CMakeLists.txt  readme.md
cmake/hdf5-cxx-exa1/: CMakeLists.txt  Possion1.cpp  createData.cpp  write_read.cpp
collier/: collier.lyx
context/: book.toml
cpp/: book.toml  clang-format
cpp-meta/: book.toml
cppLibs/: book.toml
cppLibs/mpi-exa1/: CMakeLists.txt  jacobi.cpp  jacobi.f90  jacobi2.cpp  mpiexa3.cpp  msvcpch.cmake  myFindmpi.cmake
cppLibs/mpi-exa1/Protocol/: stdafx.h
csharp/: book.toml
dlearn/: deep-learn.lyx  多项式分布.md
editor/: book.toml  sed-cmd.md
ffmpeg/: book.toml
fortran/: book.toml  data.txt
git/: book.toml
golang/: book.toml
gr-diff-geo/: differential-geometry.lyx  math-preamble.tex  physics-ymy.sty
guile/: book.toml
haskell/: book.toml
help.md/: android.md  asymptote.md  audition.md  awk.md  awk_2.md  bash.md  beamer.md  cpp-x.md  cpp.md  cpp_2.md  debian.md  drive.md  emacs.md  feyncalc.md  ffmpeg.md  fortran.md  fortran_2.md  git-x.md  git.md  git.x.md  gpg.md  hardware.md  html.md  javascript.md  javascript_2.md  js.md  js_2.md  js_3.md  js_4.md  json.md  jupyter.md  language.md  latex.md  lisp.md  lyx.md  mac-os.md  macos.md  markdown.md  mma-2.md  mma.md  (+39 more)
hep/: book.toml
html/: book.toml
java/: book.toml
js/: book.toml
latex/: .latexmkrc  texbuild  texpwsh.ps1  texvivid.pl
linux/: book.toml
llvm/: c3-1-clang-format.md  clang-asan.md  clang-basic.md  clang-system-header.md  clangd.md  cpp-insights.md  lldb-basic.md  lldb-openHarmony.md
lua/: book.toml
lyx/: beamer.lyx  report.lyx  revtex4_2.lyx  template_book.lyx
mac/: book.toml
manjaro/: book.toml
math/: FEMinEM.wl  finite_EM.lyx  group-theory.typ  math-algebra.typ  math_note.lyx  my_ytableau.typ  ymy-style.typ
matlab/: book.toml
mdbook/: book.toml
mma/: book.toml  mma-feyncalc.md  mma-to-c-expression.wl
mpi/: mpi-1-install.md  mpi-1-intro.md  mpi-3-basic-functions.md  mpi-cmake-messages.md  mpi-cmake.cmake  openMPI.md
mpi/mpi-exa1/: CMakeLists.txt  jacobi.cpp  pi.cpp
mpi/mpi-exa1/Protocol/: stdafx.cpp
mpi/mpi-exa2/: CMakeLists.txt  matrix.f90
others/: drive.md  phrase.md  满江红.md  自行车变速器调节.md  驾考理论知识.md
particle_physics/: units_transformation.wl
perl/: book.toml  test.pl
pwsh/: book.toml
python/: book.toml  gfm.py  matplot.py  test.py
qft/: .gitignore  cross_section_and_lsz_formula.lyx  dirac-field.lyx  dirac_field.lyx  eikonal.lyx  gft_chenying.lyx  lyxqft-schwartz.lyx  matrix_direct_product.lyx  peskin-2-Klein-Gordon-Field.lyx  peskin-6-Radiative-Corrections.lyx  peskin-7-radiative-corrections.lyx  peskin_10_systematics_of_renormalization.lyx  qft-scattering-examples.lyx  schwartz-1-radiation-micro.lyx  schwartz-10-spinors.lyx  schwartz-11-spinors-and-CPT.lyx  schwartz-12-spinors-statistics.lyx  schwartz-13-quantum-electrodynamics.lyx  schwartz-2-lorentz-and-quantization.lyx  schwartz-21-renormalizability.lyx  schwartz-22-Non-renormalizability-theories.lyx  schwartz-24-implication-of-unitary.lyx  schwartz-25-Yang-Mills-theory.lyx  schwartz-28-spontaneous-symmetry-breaking.lyx  schwartz-3-classical-field.lyx  schwartz-32-qcd-and-parton-model.lyx  schwartz-4-old-fashioned-perturbation.lyx  schwartz-5-cross-section.lyx  (+15 more)
racket/: hask.md  (+7 more)
(+1754 files in other folders)
